Uploaded image for project: 'Lustre'
  1. Lustre
  2. LU-20151

Sanity-sec 26 slow due to dynamic nodemap removal check

XMLWordPrintable

    • Icon: Bug Bug
    • Resolution: Fixed
    • Icon: Medium Medium
    • Lustre 2.18.0
    • Lustre 2.17.0
    • 3
    • 9223372036854775807

      It appears that LU-19478 nodemap: clear dyn nodemaps when config is changed | https://review.whamcloud.com/c/fs/lustre-release/+/62808 may have caused a slowdown in sanity-sec test_26 (create and destroy 32000 nodemaps) when it landed on 2026-01-07, going from ~400s per run to ~2000s per run, according to the subtest duration page:
      https://testing.whamcloud.com/reports?test_set_script_id=5984404e-4b34-11e0-a7f6-52540025f9af&sub_test_script_id=de315ec4-4523-11e5-a64b-5254006e85c2&source=duration_trend#redirect

      (see attachment)

            mvef Marc Vef
            mvef Marc Vef
            Votes:
            0 Vote for this issue
            Watchers:
            3 Start watching this issue

              Created:
              Updated:
              Resolved: