LU-20151 nodemap: skip dynamic nodemap clear when none exist

To ensure dynamic nodemaps are properly removed if the MGS is
co-located with an MDT/OST, dynamic nodemaps are cleared on every
ioctl that involves updating the nodemap config. This is important
because on non-co-located targets, changing the nodemap wipes the
config including dynamic nodemaps. Clearing dynamic nodemaps involves
iterating the full nodemap hash even when no dynamic nodemaps exist,
making bulk operations O(n^2). As a result, sanity-sec test 26
regressed from ~400s to ~2000s.

This patch tracks the number of dynamic nodemaps in the
nodemap_config, so the MGS ioctl path can skip clearning dyn. nodemaps
when none exist. As a result, test 26 completes in similar completion times as before.

Fixes: 2d91a30ae3 ("LU-19478 nodemap: clear dyn nodemaps when config is changed")
Test-Parameters: trivial testlist=sanity-sec
Test-Parameters: testlist=sanity-sec env=ONLY=26,ONLY_REPEAT=5
Signed-off-by: Marc Vef <mvef@whamcloud.com>
Change-Id: Iccf79819eceeb7a60921a4993c51ad298e7a4c63
Reviewed-on: https://review.whamcloud.com/c/fs/lustre-release/+/65438
Tested-by: jenkins <devops@whamcloud.com>
Reviewed-by: Oleg Drokin <green@whamcloud.com>
Tested-by: Maloo <maloo@whamcloud.com>
Reviewed-by: Sebastien Buisson <sbuisson@ddn.com>
Reviewed-by: Andreas Dilger <adilger@thelustrecollective.com>