lustre/include/lustre_nodemap.h
@@ -220,6 +220,7 @@ struct lu_nodemap *nodemap_lookup_unlocked(const char *name);
 int nodemap_add(const char *nodemap_name, bool dynamic);
 int nodemap_del(const char *nodemap_name, bool *out_clean_llog_fileset);
 void nodemap_clear_dynamic_nodemaps(void);
+bool nodemap_has_dynamic_nodemaps(void);
 int nodemap_add_member(struct ptlrpc_svc_ctx *svc_ctx, struct lnet_nid *nid,
 		       struct obd_export *exp);
 void nodemap_del_member(struct obd_export *exp);
@@ -351,6 +352,9 @@ struct nodemap_config {
 	 * containing all nodemaps
 	 */
 	struct rhashtable nmc_nodemap_sha_hash;
+
+	/* Number of dynamic nodemaps in this config */
+	atomic_t nmc_dyn_count;
 };
 
 struct nodemap_config *nodemap_config_alloc(void);
